fix: - used margin instead of gap - fixed incorrect :marker display - fixed incorrect scroll line display

--- a/UI/sections/CaseProcess/styles/_common.scss
+++ b/UI/sections/CaseProcess/styles/_common.scss
@@ -9,17 +9,16 @@
   }
 
   .stepsContainer {
-    @include flex(row, space-between, start);
+    @include flex(row, space-between, stretch);
 
-    column-gap: 53px;
-    margin-bottom: 48px;
+    margin: 0 0 -24px -53px;
+
+    & > div {
+      margin: 0 0 24px 53px;
+    }
 
     @include tablet {
       @include flex(row, center, start, wrap);
-
-      column-gap: 0;
-      row-gap: 24px;
-      margin-bottom: 24px;
     }
   }
 
